<resources>
    <string name="app_name">Silly Monks</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_email">Email address</string>
    <string name="prompt_password">Password</string>
    <string name="facebook_app_id">948537241887382</string>
    <string name="fb_login_protocol_scheme">fb948537241887382</string>
    <string name="youtube_api_key">AIzaSyB1cHZqFxookTRf73Nf7T5y0oVrCovnHAk</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_mobile">Mobile</string>
    <string name="prompt_desc">Description</string>
    <string name="prompt_sbmt">SUBMIT</string>
    <string name="no_favourites">You have no favourites</string>
    <string name="no_comments">There are no comments yet.\nBe the first to comment.</string>
    <string name="elv_undo">Undo</string>
    <string name="elv_undo_all">Undo All</string>
    <string name="elv_item_deleted">Item deleted</string>
    <string name="elv_n_items_deleted">%1$s items deleted</string>
    <string name="insights_tab_text">Insights</string>
    <string name="advertise">Advertise With Us</string>
    <string name="contact">Contact Us</string>
    <string name="error_invalid_name">This name is too short</string>
    <string name="error_invalid_number">Enter Valid Mobile Number</string>
    <string name="error_desc_required">Enter some description</string>
    <string name="login_error">Error While Login</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="related_articles">Related Articles</string>
    <string name="search_result">Search Results</string>
    <string name="silly_about_us">From Jennifer Lawrence to Shahrukh Khan, from Rajinikanth to Kamal Hassan, from Pawan Kalyan to Mohan Lal. Catch up with all your favourite stars, films, and celeb news right here. We’ve got trailers and reviews from Tollywood, Kollywood, Mollywood, Bollywood and Hollywood, so buckle up and settle down for some glitzy fun! Hang on. Movies ain’t your cup of tea? No problem- Silly Monks’ cup is brimming with short films, music and YouTube news too! Album reviews, band news, short film discussions… we’re not even sure you can handle all this. So what are you waiting for? Take a nice big sip!</string>
</resources>