<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/view">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:fitsSystemWindows="true"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            app:popupTheme="@style/AppTheme.PopupOverlay" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginLeft="-72dp"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"/>
            </LinearLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:focusableInTouchMode="true">
<RelativeLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp">

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/drawer_image"
        android:gravity="center"
        android:contentDescription="logo"
        android:layout_centerHorizontal="true" />
    <Button
        android:id="@+id/skip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="SKIP"
        android:visibility="gone"
        android:background="@android:color/holo_orange_light"
        />
</RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign-in with:"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <com.facebook.login.widget.LoginButton
                xmlns:facebook="http://schemas.android.com/apk/res-auto"
                facebook:com_facebook_login_text="              Facebook"
                facebook:com_facebook_logout_text="Logout"
                android:gravity="center_horizontal"
                android:id="@+id/fb_login_button"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:layout_margin="3dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/gplus_signin_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/fb_login_button"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:id="@+id/linearLayout3">

        <RelativeLayout
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <View
                android:id="@+id/view_left"
                android:layout_width="120dp"
                android:layout_height="1dp"
                android:layout_marginTop="13dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_toRightOf="@+id/view_left"
                android:layout_toEndOf="@+id/view_left"
                android:text="or"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="140dp"
                android:layout_height="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="13dp"
                android:layout_toRightOf="@+id/or"
                android:layout_toEndOf="@+id/or"
                android:background="@android:color/darker_gray" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/ic_email_img"
                tools:ignore="ContentDescription" />


                <EditText
                    android:id="@+id/email_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:ems="10"
                    android:maxLines="1" />



        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/ic_password_img"
                tools:ignore="ContentDescription" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:maxLines="1"
                    android:id="@+id/password_view" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#ff9900"
            android:text="SIGN IN"
            android:textSize="16sp"
            android:textStyle="normal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/black"
            android:id="@+id/sign_in_button"
            android:layout_gravity="center_horizontal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Forgot Password?"
                android:padding="2dp"
                android:textColor="#000000"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Want to Sign Up?"
                android:textColor="#000000"
                android:gravity="center"
                android:padding="2dp"
                android:id="@+id/sign_up"
                android:layout_below="@+id/forgot_password"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
</ScrollView>
</LinearLayout>